[gd_scene load_steps=8 format=2]

[ext_resource path="res://EventMaker/NormalFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://CSTMaker/CSTMaker.gd" type="Script" id=2]
[ext_resource path="res://IdolList3.tscn" type="PackedScene" id=3]
[ext_resource path="res://EventMaker/InputFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://CSTMaker/background.png" type="Texture" id=5]
[ext_resource path="res://ReturnButton.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.690196 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.635294, 0.635294, 0.635294, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -361.498
margin_right = 640.0
margin_bottom = 358.502
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -334.0
margin_right = 410.0
margin_bottom = 335.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -57.0
margin_right = 72.0
margin_bottom = -21.0
custom_fonts/font = ExtResource( 4 )
text = "Generate CST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorWarning" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -313.5
margin_top = -158.0
margin_right = -83.5
margin_bottom = -72.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_right = 790.0
margin_bottom = 593.0
custom_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer2"]
margin_right = 235.0
margin_bottom = 593.0
size_flags_horizontal = 0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NOTES1" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 235.0
margin_bottom = 50.0

[node name="NOTES1_Label" type="Label" parent="Panel/MarginContainer/HBoxContainer2/VBoxContainer2/NOTES1"]
margin_top = 14.0
margin_right = 127.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "HpMaster[...]"
align = 1

[node name="NOTES1_Edit" type="LineEdit" parent="Panel/MarginContainer/HBoxContainer2/VBoxContainer2/NOTES1"]
margin_left = 131.0
margin_right = 231.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = ExtResource( 4 )
align = 1
expand_to_text_length = true
placeholder_text = "MasterName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NOTES1_Label2" type="Label" parent="Panel/MarginContainer/HBoxContainer2/VBoxContainer2/NOTES1"]
margin_left = 235.0
margin_top = 14.0
margin_right = 235.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="NOTES2" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 55.0
margin_right = 235.0
margin_bottom = 105.0

[node name="NOTES2_Label" type="Label" parent="Panel/MarginContainer/HBoxContainer2/VBoxContainer2/NOTES2"]
margin_top = 14.0
margin_right = 131.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "File Name"
align = 1

[node name="NOTES2_Edit" type="LineEdit" parent="Panel/MarginContainer/HBoxContainer2/VBoxContainer2/NOTES2"]
margin_left = 135.0
margin_right = 235.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = ExtResource( 4 )
align = 1
expand_to_text_length = true
placeholder_text = "CstName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" parent="." instance=ExtResource( 3 )]

[node name="Button" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -621.409
margin_top = 263.805
margin_right = -448.409
margin_bottom = 332.805
rect_pivot_offset = Vector2( 2375.81, 411.254 )

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 1060.56
margin_top = 40.322
margin_right = 1270.56
margin_bottom = 470.322
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer3"]
margin_right = 210.0
margin_bottom = 213.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" parent="VBoxContainer3/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 210.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 2375.81, 411.254 )
text = "Generate CST Code"
script = null

[node name="NOTES2_Label2" type="Label" parent="VBoxContainer3/VBoxContainer"]
margin_top = 24.0
margin_right = 210.0
margin_bottom = 213.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "This is going
to take a bit of
processing power!

This should only be
used to rebuild a
version of MSute_cst
with new CSTs."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer3"]
margin_top = 253.0
margin_right = 210.0
margin_bottom = 370.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" parent="VBoxContainer3/VBoxContainer2" instance=ExtResource( 6 )]
margin_right = 210.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 2375.81, 411.254 )
text = "Generate CST Details"
script = null

[node name="NOTES2_Label2" type="Label" parent="VBoxContainer3/VBoxContainer2"]
margin_top = 24.0
margin_right = 210.0
margin_bottom = 117.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "This should only be
used to rebuild a
version of MSute_cst
with new CSTs."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer3/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer3/VBoxContainer2/Button2" to="." method="_on_Details_pressed"]
